# envy-free-matching

./: .gitignore  Cargo.toml  README.md  main.py  outcome.ipynb  requirements.txt
envy/: Cargo.toml
envy/src/: main.rs
rust/src/: main.rs
rust_project/: Cargo.toml
rust_project/src/: allocation.rs  config.rs  main.rs  matching.rs
