[package]
name = "envy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6"
pathfinding = "4.4.0"
fixedbitset = "0.4.2"
num-traits = "0.2.17"
indexmap = "2.1.0"
rustc-hash = "1.1.0"
integer-sqrt = "0.1.5"
thiserror = "1.0.50"
deprecate-until = "0.1.1"