[package]
name = "rust_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
pathfinding = "4.4.0"
fixedbitset = "0.5.7"
num-traits = "0.2.17"
indexmap = "2.1.0"
rustc-hash = "1.1.0"
integer-sqrt = "0.1.5"
thiserror = "1.0.50"
deprecate-until = "0.1.1"
csv = "1.3.0"
indicatif = "0.17.3"

[dev-dependencies]
rust_project = { path = "." }